<resources>
    <string name="app_name">TestOne_Lesh</string>
    <string name="query">Query All</string>
    <string name="update">Update</string>
    <string name="insert">Insert</string>
    <string name="previous"> &lt; </string>
    <string name="dashLabel">-</string>
    <string name="next"> &gt; </string>
    <string name="delete">Delete</string>
    <string name="authority">com.mobile.provider</string>
    <string name="read_permission">com.mobile.NamesProvider.permission.READ_PERMISSION</string>
    <string name="write_permission">com.mobile.NamesProvider.permission.WRITE_PERMISSION</string>
</resources>